big scope system